@@ -863,6 +863,7 @@
       "confirm-title": "Encaminhar sugestão?",
       "footer": "O uso indevido deste comando pode restringir seu acesso à Menhera",
       "confirm": "Enviar",
+      "approved": "Uma sugestão sua foi aprovada! Te enviei um pix de agradecimento. Obrigada <3",
       "edit": "Editar",
       "edit-title": "Editar sugestão",
       "thanks": "Sua sugestão foi enviada! Muito obrigada >.<",
